--- a/package.json
+++ b/package.json
@@ -41,9 +41,14 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
     "sass": "^1.64.1",
     "typescript": "^5.1.6"
-  }
+  },
+  "proxy": "http://localhost:8080/*"
 }
